--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,578 @@
-.App {
+*{
+  margin:0;
+  padding:0;
+}
+
+#logo{
+  width:50px;
+  height:50px;
+  border-radius: 999rem;
+  object-fit: cover;
+}
+
+#top-header-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding:20px 0px 20px 0px;
+  border-bottom: 1px solid lightgray;
+  padding-inline:150px;
+}
+
+.right-side{
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+#left-side{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap:10px;
+}
+
+#container{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  background-color: white;
+  min-height:auto;
+}
+
+#bottom-header-container{
+  display: flex;
+}
+
+.navbar-links{
+  width:100%;
+}
+
+.navbar-links ul{
+  display: flex;
+  justify-content: space-around;
+  cursor: pointer;
+  align-items: center;
+}
+
+.navbar-links ul li{
+  list-style:none;
+  width:100%;
+  padding:15px;
+  font-size:17px;
+  text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#navbar{
+  display: flex;
+  flex-direction: column;
+  gap:30px;
+}
+
+#title{
+  /* font-size:30px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold; */
+}
+
+.title{
+  width:300px;
+}
+
+#quote-text{
+  font-size:20px;
+}
+
+#quote-author{
+  font-size:18px;
+}
+
+#featured-section{
+  display: flex;
+  flex-direction: column;
+  margin-bottom:100px;
+  padding-inline:150px;
+  border-bottom: 1px solid lightgray;
+  padding-bottom:100px;
+}
+
+#featured-recipes-container{
+  padding:20px 70px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap:30px;
+  border-right:1px solid black;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  z-index:1;
+}
+
+#featured-recipes ul{
+ list-style: none;
+ display: flex;
+ flex-direction: column;
+ gap:20px;
+ /* background-color: rgba(255, 255, 255, 0.795); */
+}
+
+#featured-recipes ul li{
+  cursor: pointer;
+ }
+
+ #featured-recipes ul li:hover{
+  color: gray;
+}
+
+#recipes-title{
+  text-decoration: underline;
+  font-size:20px;
+  font-weight:bold;
+}
+
+#view-recipes{
+  font-size:16px;
+  text-decoration: underline;
+  cursor: pointer;
+  color:purple;
+}
+
+
+#featured-reviews-container{
+}
+
+.review-image{
+  width:250px;
+  height:280px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.review-title{
+  font-size:25px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.review-title:hover{
+  text-decoration: underline;
+}
+
+.read-review-btn{
+  background-color: white;
+  border: none;
+  font-size:16px;
+  cursor: pointer;
+  color: rgb(226, 99, 99) !important;
+}
+
+.read-review-btn:hover{
+  text-decoration: underline;
+}
+
+.review-info-top{
+  display: flex;
+  flex-direction: column;
+  gap:5px;
+}
+
+.review-desc{
+  font-size:16px;
+  color:black;
+}
+
+.review-date{
+  font-size:14px;
+}
+
+.review{
+  display: flex;
+  gap:18px;
+  border: none;
+}
+
+.reviews-container{
+  display: flex;
+  flex-direction: column;
+  gap:15px;
+  margin-bottom:40px;
+}
+
+.blog-section-container{
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 150px;
+  position: relative;
+}
+
+#reviews-title{
+  font-size:30px;
+  font-weight: bold;
+  margin-bottom:60px;
+}
+
+.review-info{
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+  width:400px;
+  background-color: #ffffffce;
+  justify-content: space-between;
+  padding:10px 0px 10px 10px;
+  border-bottom: 1px solid lightgray;
+}
+
+.review-see-more{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position:absolute;
+  height:100%;
+  width:100%;
+  background-color: rgba(255, 
+  255, 255, 0.719);
+  font-size:17px;
+  font-weight: bold;
+}
+
+.recipe-landing-section{
+  display: flex;
+  justify-content: space-around;
+}
+
+.recipe-title{
+  font-family: monospace;
+  font-size:20px;
+  cursor: pointer;
+  position: absolute;
+  bottom: -25px;
+  padding:10px 15px;
+  color:white;
+  background-color: rgb(255, 190, 69);
+}
+
+.recipe-title:hover{
+  text-decoration: underline;
+}
+
+.recipe-img{
+  width:360px;
+  height:500px;
+  object-fit: cover;
+  cursor: pointer;
+  transition: 0.4s ease;
+  border-radius: 9px;
+}
+
+.landing-title{
+  font-weight: bold;
+  font-size: 25px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landing-page-section{
+  display: flex;
+  flex-direction: column;
+  gap:35px;
+  background-color: #f1f1f1cc;
+  padding:50px 0px;
+  padding-inline:150px;
+  margin-bottom:70px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.recipe-img:hover{
+  opacity: 75%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.recipe-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.more-reviews-btn{
+  padding:15px 25px;
+  cursor: pointer;
+  border: 3px solid rgb(226, 99, 99);
+  font-size:15px;
+  color: white;
+  background-color: white;
+  color: rgb(226, 99, 99);
+  font-weight: bold;
+  transition: 0.4s ease;
+}
+
+.more-reviews-btn:hover{
+  color:white;
+  background-color:rgb(226, 99, 99);
+}
+
+.individual-section-info{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  position: relative;
+  border-bottom: 1px solid #e6e6e6;
+  padding-bottom:40px;
+}
+
+.individual-section{
+  display: flex;
+  flex-direction: column;
+  gap:20px;
+}
+
+.featured-recipe-img{
+  width:200px;
+  height:150px;
+  object-fit: cover;
+  border-radius: 9px;
+}
+
+.featured-recipe-name{
+  font-size:17px;
+  font-style: italic;
+  width:200px;
+}
+
+.featured-section-container{
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+
+}
+
+.row-name{
+  font-size: 20px;
+}
+
+.section-name{
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom:40px;
+}
+
+.featured-recipe-container{
+  text-align: center;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+.featured-recipe-container:hover{
+  opacity: 80%;
+}
+
+.navbar-bottom-section{
+  text-align: center;
+  padding:10px 0px 25px;
+}
+
+.navbar-bottom-info{
+  font-size:25px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.slogo-word{
+  font-style: italic;
+  font-weight: bold;
+  color: rgb(226, 99, 99);
+}
+
+.search-btn{
+  border:none;
+  padding:10px 20px;
+  border-radius: 999rem;
+  cursor: pointer;
+  color: white;
+  background-color:rgb(226, 99, 99);
+  font-size:15px;
+  transition: 0.4s ease;
+}
+
+.search-btn:hover{
+  background-color: white;
+  outline: 1px solid rgb(226, 99, 99);
+  color: rgb(226, 99, 99);
+}
+
+.view-more-btn{
+  font-size:18px;
+  cursor: pointer;
+  text-align: center;
+  color:black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.view-more{
+  position: absolute;
+  display: flex;
+  align-items: center;
+  gap:5px;
+  cursor: pointer;
+  bottom:-15px;
+  /* background-color: #e6e6e6; */
+  background-color: white;
+  border: 1px solid #e6e6e6;;
+  padding:3px 60px;
+  border-radius: 99rem;
+}
+
+.view-more:hover{
+  background-color: #e6e6e6;
+}
+
+.about-pfp{
+  width:200px;
+  border-radius: 9px;
+  object-fit: cover;
+  height:200px;
+}
+
+.about-info-aside{
+  position: sticky;
+  top:0;
+  height:500px;
+  width:320px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap:25px;
+  border-left: 1px solid lightgray;
+  padding-left:10px;
 }
 
-.App-link {
-  color: #61dafb;
+.about-title{
+  font-size:18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.about-mission{
+  font-size:18px;
 }
+
+.about-question{
+  font-size:25px;
+}
+
+.about-top{
+  display: flex;
+  flex-direction: column;
+  gap:15px;
+  font-family: monospace;
+}
+
+.about-bottom{
+  display: flex;
+  flex-direction: column;
+  gap:15px;
+  font-family: monospace;
+}
+
+.about-mission-title{
+  font-size:25px;
+}
+
+.about-info{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap:20px;
+  padding-inline:25px;
+}
+
+.contact-section-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height:70vh;
+  background-image:url(https://images4.alphacoders.com/104/thumb-1920-1044463.jpg);
+  background-position:0px -200px;
+  background-repeat: no-repeat;
+  background-size:cover;
+  margin-top:100px;
+}
+
+.contact-wrapper{
+  background-color: rgba(0, 0, 0, 0.507);
+  width:100vw;
+  height:70vh;
+}
+
+.contact-section{
+  height:100%;
+  display: flex;
+  align-items: center;
+}
+
+.contact-content{
+  display: flex;
+  flex-direction: column;
+  gap:30px;
+  padding-inline:150px;
+}
+
+.contact-title{
+  color:white;
+  font-size:26px;
+  font-weight: bold;
+}
+
+.name,.email,.phone{
+  font-size:18px;
+  width:300px;
+  height:30px;
+  padding:5px;
+}
+
+.message{
+  font-size:18px;
+  width:300px;
+  height: 90px;
+  padding:5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.submit-btn{
+  padding:13px 30px;
+  background-color: transparent;
+  border: 3px solid white;
+  color:white;
+  font-weight: bold;
+  transition: 0.4s ease;
+}
+
+.submit-btn:hover{
+  background-color: white;
+  color: black;
+  cursor: pointer;
+}
+
+.input-section{
+  display: flex;
+  flex-direction: column;
+  gap:12px;
+}
+
+/*MEDIA SECTION (DO NOT CROSS)*/
+
+@media screen and (min-width: 1700px){
+#featured-section,
+.landing-page-section,
+#top-header-container,
+.contact-content,
+.blog-section-container{
+  padding-inline:300px;
+}
+}
+
+@media screen and (max-width: 1500px){
+  #featured-section,
+  .landing-page-section,
+  #top-header-container,
+  .contact-content,
+  .blog-section-container{
+    padding-inline:150px;
+  }
+  }
