--- a/src/App.css
+++ b/src/App.css
@@ -617,7 +617,8 @@ input[type="file"]{
 }
 
 .log-in-btn{
-  padding:10px 20px;
+  padding:10px 30px;
+  width:110px;
   border-radius: 3px;
   background-color: transparent;
   border: 1px solid black;
