--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,7 @@
   justify-content: space-around;
   cursor: pointer;
   align-items: center;
+
 }
 
 .navbar-links ul li{
@@ -63,6 +64,16 @@
   text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+.navbar-links ul li link{
+  text-decoration: none;
+}
+
+#link{
+  text-decoration: none;
+  color:black;
+}
+
 
 #navbar{
   display: flex;
@@ -620,11 +631,13 @@ input[type="file"]{
   padding:10px 30px;
   width:110px;
   border-radius: 3px;
-  background-color: transparent;
-  border: 1px solid black;
-  color: black;
+  background-color: rgb(226, 99, 99);
+  border: 1px solid transparent;
+  color: white;
   cursor: pointer;
 }
+
+
 
 .signup-section{
   display: flex;
@@ -640,6 +653,30 @@ input[type="file"]{
   display: flex;
   flex-direction: column;
   gap:10px;
+}
+
+.blog-container{
+  min-height: 80vh;
+  position: relative;
+}
+
+.create-post{
+  position: absolute;
+  bottom:0;
+  right:30px;
+  padding:15px 0px;
+  width:150px;
+  border-radius: 999rem;
+  background-color: rgb(226, 99, 99);
+  border: 1px solid transparent;
+  color: white;
+  cursor: pointer;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.create-module{
+  background-color: red;
+  
 }
 
 /*MEDIA SECTION (DO NOT CROSS)*/
