--- a/src/App.css
+++ b/src/App.css
@@ -527,7 +527,7 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.create-message{
+.post-message{
   font-size:18px;
   width:250px;
   height:100px;
@@ -681,27 +681,57 @@ input[type="file"]{
 
 .exit-dialog{
   position: absolute;
-  right:10px;
-  top:5px;
+  right:20px;
+  top:10px;
   cursor: pointer;
-}
-
-#dialog{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: lightblue;
-  border: none;
-  border-radius: 9px;
+  color:white;
+  font-weight: bold;
+  font-size:20px;
 }
 
 #dialog-form{
+  display: none;
+  border: none;
+  border-radius: 9px;
+  position: absolute; 
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 400px; 
+  background-image: url(https://images8.alphacoders.com/890/890246.jpg);
+  background-repeat: no-repeat;
+  background-size:cover;
+  background-position: -80px;
+}
+
+.post-title{
+  padding: 10px;
+  font-size:15px;
+  width:200px;
+  outline:3px solid white;
+  border: none;
+}
+
+.create-post-message{
+  width:200px;
+  padding:10px;
+  font-size:13px;
+  height:100px;
+  outline:3px solid white;
+  font-family: Arial, Helvetica, sans-serif;
+  border: none;
+}
+
+.form-structure{
   display: flex;
   align-items: center;
   gap: 20px;
   flex-direction: column;
-  padding:25px;
+  padding: 40px;
   position: relative;
+  background-color: rgba(0, 0, 0, 0.377);
+  border-radius: 9px;
 }
 
 /*MEDIA SECTION (DO NOT CROSS)*/
