--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,15 @@ nav{
   color: black;
 }
 
+#login-link{
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#login-link:hover{
+  text-decoration: underline;
+}
 
 #navbar {
   display: flex;
@@ -627,12 +636,13 @@ nav{
 
 .signup-titles {
   display: flex;
-  gap: 8px;
+  gap: 10px;
 }
 
 .signup-page-btn {
   color: white;
   cursor: pointer;
+  font-size: 30px;
 }
 
 .login-page-btn {
@@ -709,8 +719,13 @@ input[type="file"] {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 30px;
+  padding: 70px;
+  gap:10px;
   border-radius: 9px;
+}
+
+#signup-login link{
+  color:white;
 }
 
 .signup-form {
@@ -746,43 +761,37 @@ input[type="file"] {
   background-color: red;
 }
 
-.exit-dialog {
-  position: absolute;
-  right: 20px;
-  top: 10px;
-  cursor: pointer;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
+.create-post-container{
+  display: grid;
+  place-items: center;
+  flex-direction: column;
+  height:80vh;
+  overflow: hidden;
 }
 
-#dialog-form {
-  display: none;
+.post-form {
   border: none;
   border-radius: 9px;
-  position: absolute;
-  left: 0;
-  right: 0;
   margin-left: auto;
   margin-right: auto;
+  padding:30px;
   z-index: 1;
-  width: 400px;
+  width: 600px;
   background-image: url(https://images8.alphacoders.com/890/890246.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: -80px;
 }
 
 .post-title {
   padding: 10px;
-  font-size: 15px;
-  width: 200px;
+  font-size: 18px;
+  width: 300px;
   outline: 3px solid white;
   border: none;
 }
 
 .create-post-message {
-  width: 200px;
+  width: 300px;
   padding: 10px;
   font-size: 13px;
   height: 100px;
@@ -794,7 +803,7 @@ input[type="file"] {
 .form-structure {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 50px;
   flex-direction: column;
   padding: 40px;
   position: relative;
