--- a/src/App.css
+++ b/src/App.css
@@ -10,15 +10,6 @@
   object-fit: cover;
 }
 
-#top-header-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 20px 0px 20px 0px;
-  border-bottom: 1px solid lightgray;
-  padding-inline: 150px;
-}
-
 .right-side {
   display: flex;
   align-items: center;
@@ -215,6 +206,7 @@ nav{
   justify-content: space-between;
   padding-inline: 150px;
   position: relative;
+  padding-bottom:100px;
 }
 
 #reviews-title {
@@ -484,7 +476,6 @@ nav{
   background-position: 0px -200px;
   background-repeat: no-repeat;
   background-size: cover;
-  margin-top: 100px;
 }
 
 .contact-wrapper {
@@ -558,7 +549,7 @@ nav{
 .input-section {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 20px;
 }
 
 .insert-img {
@@ -597,6 +588,19 @@ nav{
   background-color: transparent;
   font-size: 18px;
   color: white;
+  outline: 3px solid white;
+  border: none;
+  font-size: 15px;
+  transition: 0.4s ease;
+  cursor: pointer;
+  font-weight:none;
+  padding: 10px 25px;
+}
+
+.create-btn-home {
+  background-color: transparent;
+  font-size: 18px;
+  color: white;
   border: 3px solid white;
   font-size: 15px;
   transition: 0.4s ease;
@@ -605,7 +609,7 @@ nav{
   padding: 10px 25px;
 }
 
-.create-btn:hover {
+.create-btn-home:hover {
   background-color: rgb(255, 190, 69);
   color: white;
 }
@@ -750,12 +754,60 @@ input[type="file"] {
 .blog-container {
   min-height: 80vh;
   position: relative;
+  background-color: rgb(247, 245, 245);
+  padding-bottom: 50px;
+}
+
+.blog-section-title{
+  font-size:30px;
+  display: flex;
+  justify-content: center;
+  padding:70px;
+  color:white;
+  font-weight: bold;
+  margin-bottom:30px;
+  background-color: rgba(0, 0, 0, 0.443);
+}
+
+.blog-section-title-wrapper{
+  background-image: url(https://images4.alphacoders.com/104/thumb-1920-1044463.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 0px;
+}
+
+.post{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  gap:20px;
+  padding:30px;
+  box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.1);
+}
+
+.post-titletext{
+  font-size:20px;
+}
+
+.post-author{
+  font-size:15px;
+}
+
+.post-posttext{
+  font-size:16px;
+}
+
+.posts-container{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap:20px;
+  padding: 70px 0px;
 }
 
 .create-post {
-  position: absolute;
-  bottom: 0;
-  right: 30px;
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
   padding: 15px 0px;
   width: 150px;
   border-radius: 999rem;
@@ -764,6 +816,11 @@ input[type="file"] {
   color: white;
   cursor: pointer;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: 0.4s ease;
+}
+
+.create-post:hover{
+  background-color: rgb(239, 120, 120);
 }
 
 .create-module {
@@ -774,8 +831,10 @@ input[type="file"] {
   display: grid;
   place-items: center;
   flex-direction: column;
-  height:80vh;
-  overflow: hidden;
+  height:85vh;
+  background-image: url(https://images4.alphacoders.com/104/thumb-1920-1044463.jpg);
+  background-size: cover;
+  
 }
 
 .post-form {
@@ -785,16 +844,14 @@ input[type="file"] {
   margin-right: auto;
   z-index: 1;
   width: 600px;
-  background-image: url(https://images8.alphacoders.com/890/890246.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 .post-title {
   padding: 10px;
   font-size: 18px;
   width: 300px;
-  outline: 3px solid white;
+  outline: 1px solid black;
+  color:black;
   border: none;
 }
 
@@ -803,7 +860,7 @@ input[type="file"] {
   padding: 10px;
   font-size: 13px;
   height: 100px;
-  outline: 3px solid white;
+  outline: 1px solid black;
   font-family: Arial, Helvetica, sans-serif;
   border: none;
 }
@@ -815,7 +872,6 @@ input[type="file"] {
   flex-direction: column;
   padding: 40px;
   position: relative;
-  background-color: rgba(0, 0, 0, 0.377);
   border-radius: 9px;
 }
 
@@ -827,7 +883,8 @@ input[type="file"] {
   .landing-page-section,
   #top-header-container,
   .contact-content,
-  .blog-section-container {
+  .blog-section-container,
+  .posts-container {
     padding-inline: 300px;
   }
 }
@@ -838,7 +895,8 @@ input[type="file"] {
   .landing-page-section,
   #top-header-container,
   .contact-content,
-  .blog-section-container {
+  .blog-section-container,
+  .posts-container {
     padding-inline: 150px;
   }
 }
