--- a/src/App.css
+++ b/src/App.css
@@ -930,9 +930,11 @@ input[type="file"] {
 
 .recipes-section{
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   justify-items: center;
+  gap:30px;
   padding-top:50px;
+  padding-inline:300px;
 }
 
 /*MEDIA SECTION (DO NOT CROSS)*/
