--- a/src/App.css
+++ b/src/App.css
@@ -911,9 +911,30 @@ input[type="file"] {
   justify-content: center;
 }
 
+
+.dish-img{
+  width:100px;
+  height:200px;
+  object-fit: cover;
+}
+
 .dish{
-  border: 3px solid black;
+  box-shadow: 0px 0px 0px 1px rgba(0,0,0,0.1);
   display: inline-block;
+  padding:10px;
+  background-color: white;
+  border-radius: 9px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:5px;
+  cursor: pointer;
+  transition: 0.4s ease;
+}
+
+.dish:hover{
+  opacity: 75%;
 }
 
 .dish-img{
@@ -921,7 +942,7 @@ input[type="file"] {
 }
 
 .dish-name{
-
+  font-size:18px;
 }
 
 .dish-desc{
@@ -934,6 +955,7 @@ input[type="file"] {
   justify-items: center;
   gap:30px;
   padding-top:50px;
+  padding-bottom:50px;
   padding-inline:300px;
 }
 
@@ -963,7 +985,7 @@ input[type="file"] {
   }
 }
 
-@media screen and (min-width: 1000px) {
+/* @media screen and (min-width: 1000px) {
 
   #featured-section,
   .landing-page-section,
@@ -973,7 +995,7 @@ input[type="file"] {
   .posts-container {
     padding-inline: 150px;
   }
-}
+} */
 
 /* @media screen and (max-width: 1600px){
     #featured-section,
